kubernetes/core/flux-system/flux-operator/app/httproute.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - "flux.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
  parentRefs:
    - name: traefik-private
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
